@@ -1,11 +1,11 @@
 language: "python"
 install:
   - "sudo apt-get -y install automake autoconf libtool pkg-config"
-  - "sudo apt-get -y install libsnmp-dev libxml2-dev libevent-dev check"
+  - "sudo apt-get -y install libsnmp-dev libxml2-dev libjansson-dev libevent-dev check"
 script: "./autogen.sh && ./configure $LLDPD_CONFIG_ARGS && make && make check && make distcheck && sudo make install"
 env:
   - LLDPD_CONFIG_ARGS=""
-  - LLDPD_CONFIG_ARGS="--with-snmp --with-xml --disable-lldpmed --disable-dot1 --disable-dot3"
+  - LLDPD_CONFIG_ARGS="--with-snmp --with-xml --with-json --disable-lldpmed --disable-dot1 --disable-dot3"
 branches:
   only:
     - master
