@@ -63,7 +63,8 @@ update its information and send new LLDP PDU on all interfaces.
 .It Fl f Ar format
 Choose the output format. Currently
 .Em plain ,
-.Em xml
+.Em xml ,
+.Em json
 and
 .Em keyvalue
 formats are available. The default is
