@@ -41,5 +41,8 @@ extern struct writer * kv_init( FILE * );
 #ifdef USE_XML
 extern struct writer * xml_init( FILE * );
 #endif
+#ifdef USE_JSON
+extern struct writer * json_init( FILE * );
+#endif
 
 #endif /* _WRITER_H */
